--- a/Go_Green/index.html
+++ b/Go_Green/index.html
@@ -596,7 +596,7 @@
                         </div>
                         <div class="text-center border border-5 border-light border-top-0 p-4">
                             <h5 class="mb-0">Mr Aniruddh Ku</h5>
-                            <small>Designation</small>
+                            <small>Full Stack Developer</small>
                         </div>
                     </div>
                 </div>
